--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
+    "hi-base32": "^0.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.4",
     "otpauth": "^9.1.4"
